...
        let countryList = [
            "AF": ["Afghanistan","93"],
            "AX": ["Aland Islands","358"],
            "AL": ["Albania","355"],
            "DZ": ["Algeria","213"],
            "AS": ["American Samoa","1"],
            "AD": ["Andorra","376"],
            "AO": ["Angola","244"],
            "AI": ["Anguilla","1"],
            "AQ": ["Antarctica","672"],
            "AG": ["Antigua and Barbuda","1"],
            "AR": ["Argentina","54"],
            "AM": ["Armenia","374"],
...
