...
                                                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xlE-wR-dL7">
                                                                                        <rect key="frame" x="72.666666666666657" y="0.0" width="55" height="30"/>
                                                                                        <constraints>
                                                                                            <constraint firstAttribute="width" constant="55" id="il8-J7-KW5"/>
                                                                                        </constraints>
                                                                                        <fontDescription key="fontDescription" name="Rubik-Medium" family="Rubik" pointSize="15"/>
                                                                                        <state key="normal" title="Sign up"/>
                                                                                        <connections>
                                                                                            <action selector="showSignUpView" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ixc-EC-UCX"/>
                                                                                        </connections>
                                                                                    </button>
                                                                                </subviews>
                                                                                <constraints>
...
